Wrote some more

--- a/index.Rmd
+++ b/index.Rmd
@@ -21,9 +21,11 @@ header-includes:
   - \usepackage{tikz-cd}
 ---
 
-# Abstract 
+# Abstract
 
-Interactive data visualization has become a staple of modern data presentation. Yet, despite its growing popularity, there still exists many unresolved issues which make the process of producing rich interactive data visualizations difficult. Chief among these is the problem of data pipelines: how do we design a framework for turning raw data into summary statistics that can then be visualized, efficiently, on demand, and in a visually coherent way? Despite seeming like a straightforward task, there are in fact many subtle problems that arise when designing such a pipeline, and some of these may require a dramatic shift in perspective. In this thesis, I argue that, in order to design coherent generic interactive data visualization systems, we need to ground our thinking in concepts from some fairly abstract areas of mathematics including category theory and abstract algebra. By leveraging these algebraic concepts, we may be able to build more flexible and expressive interactive data visualization systems.
+Interactive data visualization has become a staple of modern data presentation. However, creating rich interactive figures still remains a challenging task. Certain useful and sophisticated interactive features are often absent from existing tools, or are supported to only a limited degree. This implementation gap may stem from a subtle yet profound issue: what we can *do* with a visualization is fundamentally determined by what the visualization *is*. Since graphs are not mere images, but instead visual representations of structured information, interactive features need to be congruent with the mathematical properties of the underlying data. While seemingly self-evident, this idea is at tension with the prevailing practices. Many current systems based on the Grammar of Graphics model aim to treat graphics, statistics, and interaction as independent, modular components, which can be freely combined. I argue that this independence model, despite many appealing properties, is fundamentally flawed; visualization components are not independent, but instead deeply interconnected.
+
+In this thesis, I explore this inherent interconnectedness of figure components, the challenges it poses for interactive visualization systems, and propose a simple model based on some fundamental ideas from category theory. Furthermore, I also present `plotscaper`, an R package developed to both refine these theoretical ideas and offer a practical tool for interactive data exploration. My goal is to demonstrate that, in order to design truly consistent and general interactive data visualization systems, we need to ground our thinking in algebraic concepts. 
 
 ```{r}
 #| echo: false
